target/classes/nisarg20/2/usererror.txt
src/main/resources/nisarg20/2/userprogram.cpp: In function ‘int main()’:
src/main/resources/nisarg20/2/userprogram.cpp:8:2: error: expected initializer before ‘cin’
  cin>>t;
  ^~~
src/main/resources/nisarg20/2/userprogram.cpp:9:8: error: ‘t’ was not declared in this scope
  while(t--)
        ^
src/main/resources/nisarg20/2/userprogram.cpp:9:8: note: suggested alternative: ‘tm’
  while(t--)
        ^
        tm
